Configuração banco de Dados, Seed Professor, docker

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "migrate": "knex migrate:up --migrations-directory=src/migrations/",
+    "seed": "knex seed:run"
   },
   "dependencies": {
     "cors": "^2.8.5",
